--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
     -->
     <title>React App</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
